--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 <body>
   <div class="main">
     <picture class="picture">
-        <source
-        srcset="images/image-product-desktop.jpg" media="(min-width:500px)" >
-        <img src="/images/image-product-mobile.jpg">
-      </picture>
+      <source srcset="images/image-product-desktop.jpg" media="(min-width:500px)">
+      <img src="images/image-product-mobile.jpg">
+    </picture>
     <div class="text">
       <p>P E R F U M E</p>
       <h1>Gabrielle Essence Eau De Parfum</h1>
