--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="main">
     <picture class="picture">
       <source srcset="images/image-product-desktop.jpg" media="(min-width:500px)">
-      <img src="images/image-product-mobile.jpg">
+      <img src="images/image-product-mobile.jpg" alt="https//www.frontendmentor.io">
     </picture>
     <div class="text">
       <p>P E R F U M E</p>
@@ -38,7 +38,7 @@
 
       <div class="price">
         <div class="current">$149.99</div>
-        <div class="previous"><span><strike>$169.99</strike></span></div>
+        <div class="previous"><span style="text-decoration: line-through;">$169.99</span></div>
       </div>
       <button type="button">Add to cart</button>
     </div>
